Add docs of Axure8

--- a/2019-7-2/2019-7-2.md
+++ b/2019-7-2/2019-7-2.md
@@ -8,6 +8,33 @@
 
 4. vue react angular：数据驱动
 
+
+### 环境确认
+0. 查看node是否安装成功：
+```
+node -v
+```
+
+1. npm设置设置cnpm：
+- 永久设置
+```
+npm config set registry https://registry.npm.taobao.org
+```
+- 验证是否设置成功
+```
+npm config get registry
+```
+
+2. 安装 @vue/cli 3.x 脚手架
+- 安装：
+```
+npm install -g @vue/cli
+```
+- 查看安装版本(3.x)：
+```
+vue --version
+```
+
 ### vue
 1. 安装vue脚手架vue-cli 3.x版本工具 @vue/cli
 2. 创建vue工程项目：vue create [project-name]
